tests/rosetta/out/Zig/averages-arithmetic-mean.error
zig build error: exit status 1
/tmp/TestMochiZigGoldenaverages-arithmetic-mean2164646266/001/prog.zig:33:11: error: type '[]i32' does not support array initialization syntax
/tmp/TestMochiZigGoldenaverages-arithmetic-mean2164646266/001/prog.zig:33:11: note: inferred array length is specified with an underscore: '[_]i32'
